# cropification

./: .env  .gitignore  Pipfile  README.md  app.yaml  manage.py  pyproject.toml  requirements.txt
Agriculture/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  detect.py  models.py  urls.py  vegetation_localization.py  views.py
main/migrations/: 0001_initial.py  0002_newsalert.py  0003_auto_20200506_1811.py  0004_auto_20200508_1547.py  0005_auto_20200508_1736.py
templates/: Edit_Profile.html  Gallery.html  History.html  Services.html  area.html  change_password.html  index.html  object_detection.html  parameters.html  signin.html  signup.html  upload.html  vegetation_localization.html  view_profile.html
yolo_v3/: obj.names  weights.txt  yolov3.cfg
