[project]
name = "cropification"
version = "0.1.0"
description = "Agriculture image-analysis Django app (crop detection, vegetation localization)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.2,<5.3",
    "pillow>=11",
    "numpy>=2",
    "opencv-python-headless>=4.11",
    "psycopg[binary]>=3.2",
    "gunicorn>=23",
]
